# ddd_llm

ddd_llm_app_tag6/: .gitattributes  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  build_ddd_llm.sh  docker-web-user-config.yaml  pyproject.toml  rag_api_call.sh  requirements.txt  requirements_local.txt  run_chat_ui.sh  run_ddd_llm.sh  run_ddd_llm_rag_api.sh  run_ddd_llm_web.sh  run_local_rag_api.sh  user-config.yaml  web-user-config.yaml
ddd_llm_app_tag6/ddd_domain/: prorail_domain.md
ddd_llm_app_tag6/ddd_llm_app/: app.py  chat_ui.py  logging_config.py  main.py  rag_api.py  utils.py
ddd_llm_app_tag6/ddd_llm_app/config/: __init__.py  config.py  default-config.yaml  settings.py
ddd_llm_app_tag6/ddd_llm_app/llm_providers/: __init__.py  anthropic_provider.py  base_provider.py  custom_flant5_provider.py  deepseek_provider.py  openai_provider.py
ddd_llm_app_tag6/ddd_llm_app/services/: ddd_tasks.py  llm_service.py
ddd_llm_app_tag6/ddd_llm_app/templates/: index.html
ddd_llm_app_tag6/examples/: ddd-theory1.txt  prorail_domain_response.md
ddd_llm_app_tag6/notebooks/: exploring_RAG.ipynb  querying_RAG.ipynb
ddd_llm_app_tag6/notebooks/prorail_dom_idx/: index.faiss  index.pkl
ddd_llm_app_tag6/templates/: ddd_prompt.txt
ddd_llm_app_tag6/tests/: test-user-config.yaml  test_openai_provider.py
ddd_llm_app_tag6/tests/templates/: test_1.txt  test_prompt_tmpl.txt
